tess_porto.html

--- a/tess_porto.html
+++ b/tess_porto.html
@@ -63,12 +63,12 @@
                 <p class="skill-label">Figma</p>
             </div>
             <div>
-                <div class="skill-circle">CC</div>
-                <p class="skill-label">Capcut</p>
+                <div class="skill-circle">ML</div>
+                <p class="skill-label">Mobile Legend</p>
             </div>
             <div>
-                <div class="skill-circle">PB</div>
-                <p class="skill-label">Playing Basket</p>
+                <div class="skill-circle">VL</div>
+                <p class="skill-label">Valorant</p>
             </div>
             <div>
             </div>
