tess_porto.html

--- a/tess_porto.html
+++ b/tess_porto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Cae</title>
-    <link rel="stylesheet" href="CSS/tes_porto.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 <body>
@@ -12,7 +12,7 @@
 <div class="container">
     <!-- Left Side -->
     <div class="left-side">
-        <img src="Gambar/Gambar cae 1.HEIC" alt="Profile Picture" class="profile-img">
+        <img src="Gambar cae 1.HEIC" alt="Profile Picture" class="profile-img">
         <h1>M. Caesar Aidarus</h1>
         <h2>ABOUT ME</h2>
         <p>Saya adalah seorang mahasiswa semester 4 di Universitas Syiah Kuala yang sedang menempuh pendidikan di jurusan Informatika...</p>
